// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders with sign in 1`] = `
<DocumentFragment>
  <nav
    class="navigation"
    id="header"
  >
    <a
      href="/"
    >
      Home
    </a>
    <a
      href="/browse"
    >
      Browse Categories
    </a>
    <a
      href="/item/new"
    >
      Manage Items
    </a>
    <a
      href="/sign-in"
    >
      Sign in
    </a>
  </nav>
</DocumentFragment>
`;

exports[`Header renders without sign in 1`] = `
<DocumentFragment>
  <nav
    class="navigation"
    id="header"
  >
    <a
      href="/"
    >
      Home
    </a>
    <a
      href="/browse"
    >
      Browse Categories
    </a>
    <a
      href="/item/new"
    >
      Manage Items
    </a>
  </nav>
</DocumentFragment>
`;
